# Spotify

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build-deploy.yaml
section_01/: Cargo.toml
section_01/src/: main.rs
src/: lib.rs  main.rs
src/router/: routes.rs
src/spotify/: playlist.rs
src/static/: index.html
