[package]
name = "spotify"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["headers"] }
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.164", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.28.2", features = ["full", "macros", "rt-multi-thread"] }
tower-http = { version = "0.4.1", features = ["cors"] }